fixed whitespace on mobile

--- a/src/styles/AppStyle.css
+++ b/src/styles/AppStyle.css
@@ -5,6 +5,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow-x: hidden;
   /* background-image: url('../images/backgroundImg.png');
   background-repeat: no-repeat;
   background-size: cover;
